# alvadescpy

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml
alvadescpy/: __init__.py  functions.py  wrapper.py
tests/: test.py
